修改了Keras与Django线程不匹配的bug；以及修改绝对路径为相对路径

--- a/WCS/templates/index.html
+++ b/WCS/templates/index.html
@@ -21,7 +21,8 @@
             <div class="bottom">
                 <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
-                    <input type="text" name="img_name">
+{#                    <input type="text" name="img_name">#}
+
                     <input type="file" name="upload_img" id="upload_img">
                     <button type="submit" name="submit_img">上传</button>
                     {% if category %}
