加入新功能：直接检索

--- a/WCS/templates/hazardous_detail.html
+++ b/WCS/templates/hazardous_detail.html
@@ -13,7 +13,8 @@
         <div class="left">
             <ul>
                 <li><a href="/index/">主页</a></li>
-                <li><a href="">垃圾分类小贴士</a></li>
+                <li><a href="/index_text/">直接检索</a></li>
+                <li><a href="/garbage_tips/">垃圾分类小贴士</a></li>
                 <li><a href="">社会责任</a></li>
             </ul>
         </div>
