--- a/WCS/templates/other_detail_text.html
+++ b/WCS/templates/other_detail_text.html
@@ -28,7 +28,7 @@
 </div>
 <div id="other_garbage">
     <div class="good_name">
-        <h2>{{ good.goods_category.name }}：</h2>
+        <h2>{{ name }}：</h2>
     </div>
     <div class="top">
         <div class="left">
@@ -37,9 +37,6 @@
                     <img src="/static/images/front/other_garbage.png" alt="">
                 </a>
             </div>
-        </div>
-        <div class="right">
-            <img src="/media/{{ good.image }}">
         </div>
     </div>
     <div class="bottom">
