--- a/WCS/templates/recycled_detail_text.html
+++ b/WCS/templates/recycled_detail_text.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>其他垃圾</title>
-    <link rel="stylesheet" href="/static/css/other_garbage.css">
+    <title>可循环物</title>
+    <link rel="stylesheet" href="/static/css/recycled_content.css">
     <link rel="stylesheet" href="/static/css/header.css">
     <link rel="stylesheet" href="/static/css/common.css">
 </head>
@@ -26,32 +26,32 @@
         </div>
     </div>
 </div>
-<div id="other_garbage">
+<div id="recycled_content">
     <div class="good_name">
-        <h2>{{ good.goods_category.name }}：</h2>
+        <h2>{{ name }}：</h2>
     </div>
     <div class="top">
         <div class="left">
             <div>
                 <a href="">
-                    <img src="/static/images/front/other_garbage.png" alt="">
+                    <img src="/static/images/front/recycled_content.png" alt="">
                 </a>
             </div>
-        </div>
-        <div class="right">
-            <img src="/media/{{ good.image }}">
         </div>
     </div>
     <div class="bottom">
         <div class="box">
             <div class="throw">
                 <h3>投放须知：</h3>
-                <p> · 尽量沥干水分；</p>
-                <p> · 难以辨别的垃圾应投入其他垃圾中；</p>
+                <p> · 轻投轻放；</p>
+                <p> · 废纸尽量平整；</p>
+                <p> · 清洁干燥，薄面污染；</p>
+                <p> · 立体包装物请清空内容物，清洁后压扁投放；</p>
+                <p> · 有尖锐边角的，应包裹后投放。</p>
             </div>
             <div class="example">
                 <h3>例如:</h3>
-                <p> · 面膜、塑料袋、纸巾、一次性筷子、吸管、包装袋等</p>
+                <p> · 纸类、塑料、金属、玻璃、木料、织物、电子废弃物</p>
             </div>
         </div>
     </div>
