--- a/WCS/templates/hazardous_detail_text.html
+++ b/WCS/templates/hazardous_detail_text.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>其他垃圾</title>
-    <link rel="stylesheet" href="/static/css/other_garbage.css">
+    <title>有害垃圾</title>
+    <link rel="stylesheet" href="/static/css/hazardous_waste.css">
     <link rel="stylesheet" href="/static/css/header.css">
     <link rel="stylesheet" href="/static/css/common.css">
 </head>
@@ -26,32 +26,30 @@
         </div>
     </div>
 </div>
-<div id="other_garbage">
+<div id="hazardous_waste">
     <div class="good_name">
-        <h2>{{ good.goods_category.name }}：</h2>
+        <h2>{{ name }}：</h2>
     </div>
     <div class="top">
         <div class="left">
             <div>
                 <a href="">
-                    <img src="/static/images/front/other_garbage.png" alt="">
+                    <img src="/static/images/front/hazardous_waste.png" alt="">
                 </a>
             </div>
-        </div>
-        <div class="right">
-            <img src="/media/{{ good.image }}">
         </div>
     </div>
     <div class="bottom">
         <div class="box">
             <div class="throw">
                 <h3>投放须知：</h3>
-                <p> · 尽量沥干水分；</p>
-                <p> · 难以辨别的垃圾应投入其他垃圾中；</p>
+                <p> · 轻投轻放；</p>
+                <p> · 易破损的请连带包装或包裹后轻放；</p>
+                <p> · 如易挥发，请密封后投放；</p>
             </div>
             <div class="example">
                 <h3>例如:</h3>
-                <p> · 面膜、塑料袋、纸巾、一次性筷子、吸管、包装袋等</p>
+                <p> · 电池、口服液瓶子、药瓶、灯泡、照片、胶囊药片底板、油漆桶等</p>
             </div>
         </div>
     </div>
