登录注册静态页面上线

--- a/WCS/templates/index.html
+++ b/WCS/templates/index.html
@@ -22,8 +22,8 @@
         </div>
         <div class="right">
             <ul>
-                <li><a href="">登录</a></li>
-                <li><a href="">注册</a></li>
+                <li><a href="/sign_in/">登录</a></li>
+                <li><a href="/sign_up/">注册</a></li>
             </ul>
         </div>
     </div>
