--- a/WCS/templates/sign_in.html
+++ b/WCS/templates/sign_in.html
@@ -22,7 +22,7 @@
 <body>
 	<div class="main">
 		<h4 class="title">
-			<a href="" class="active">登录</a>
+			<a href="/sign_in/" class="active">登录</a>
 			<b>·</b>
 			<a href="/sign_up/" class="sign-up">注册</a>
 		</h4>
