--- a/WCS/templates/sign_up.html
+++ b/WCS/templates/sign_up.html
@@ -24,7 +24,7 @@
 		<div class="title">
 			<a href="/sign_in/" class="active">登录</a>
 			<b>·</b>
-			<a href="" class="sign-up">注册</a>
+			<a href="/sign_up/" class="sign-up">注册</a>
 		</div>
 		<div class="sign-container">
 			<form action="" id="new_session" method = "post">
