--- a/WCS/templates/index_text.html
+++ b/WCS/templates/index_text.html
@@ -23,8 +23,12 @@
         </div>
         <div class="right">
             <ul>
-                <li><a href="">登录</a></li>
-                <li><a href="">注册</a></li>
+                {% if request.session.username %}
+                    <li><a href="/sign_out/">欢迎你：{{ request.session.username }}！</a></li>
+                {% else %}
+                    <li><a href="/sign_in/">登录</a></li>
+                    <li><a href="/sign_up/">注册</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
