--- a/WCS/templates/sign_in.html
+++ b/WCS/templates/sign_in.html
@@ -30,8 +30,8 @@
 			<form action="" id="new_session" method="post">
                 {% csrf_token %}
 				<div class="inputbox">
-					<input type="text" placeholder="用户名" name="username">
-					<input type="password" placeholder="密码" name="password">
+					<input type="text" placeholder="用户名" name="username" id="username_in">
+					<input type="password" placeholder="密码" name="password" id="password_in">
 				</div>
 				<div class="below-input">
 					<div class="remember-btn">
