登录注册页面修整

--- a/WCS/static/css/sign_in.css
+++ b/WCS/static/css/sign_in.css
@@ -62,7 +62,7 @@ b {
 .inputbox #username_in {
 	border-radius: 4px 4px 0 0;
 }
-.inputbox #user_name_up {
+.inputbox #username_up {
 	border-radius: 4px 4px 0 0;
 }
 .inputbox #password_up {
